[package]
name = "specoxy"
version = "0.1.1"
edition = "2021"
author = "Darkskald"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "specoxy"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.14.5"
features = ["extension-module"]

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
